; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/cpu/musashi/extr_m68kdasm.c_d68020_cpbcc_32.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/cpu/musashi/extr_m68kdasm.c_d68020_cpbcc_32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_cpu_pc = common dso_local global i32 0, align 4
@M68020_PLUS = common dso_local global i32 0, align 4
@g_dasm_str = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [39 x i8] c"%db%-4s  %s; %x (extension = %x) (2-3)\00", align 1
@g_cpu_ir = common dso_local global i32 0, align 4
@g_cpcc = common dso_local global i8** null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @d68020_cpbcc_32 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @d68020_cpbcc_32() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32, i32* @g_cpu_pc, align 4
  store i32 %3, i32* %2, align 4
  %4 = load i32, i32* @M68020_PLUS, align 4
  %5 = call i32 @LIMIT_CPU_TYPES(i32 %4)
  %6 = call i32 (...) @read_imm_16()
  store i32 %6, i32* %1, align 4
  %7 = call i64 (...) @read_imm_32()
  %8 = load i32, i32* %2, align 4
  %9 = sext i32 %8 to i64
  %10 = add nsw i64 %9, %7
  %11 = trunc i64 %10 to i32
  store i32 %11, i32* %2, align 4
  %12 = load i32, i32* @g_dasm_str, align 4
  %13 = load i32, i32* @g_cpu_ir, align 4
  %14 = ashr i32 %13, 9
  %15 = and i32 %14, 7
  %16 = load i8**, i8*** @g_cpcc, align 8
  %17 = load i32, i32* @g_cpu_ir, align 4
  %18 = and i32 %17, 63
  %19 = sext i32 %18 to i64
  %20 = getelementptr inbounds i8*, i8** %16, i64 %19
  %21 = load i8*, i8** %20, align 8
  %22 = call i8* (...) @get_imm_str_s16()
  %23 = load i32, i32* %2, align 4
  %24 = load i32, i32* %1, align 4
  %25 = call i32 @sprintf(i32 %12, i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str, i64 0, i64 0), i32 %15, i8* %21, i8* %22, i32 %23, i32 %24)
  ret void
}

declare dso_local i32 @LIMIT_CPU_TYPES(i32) #1

declare dso_local i32 @read_imm_16(...) #1

declare dso_local i64 @read_imm_32(...) #1

declare dso_local i32 @sprintf(i32, i8*, i32, i8*, i8*, i32, i32) #1

declare dso_local i8* @get_imm_str_s16(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
